stage one contact-us

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
   </head>
 
   <body>
+    <header>
+      <nav class="navbar" role="navigation" aria-label="Main Navigation">
+        
+        <ul class="nav-links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About Me</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+      </nav>
+    </header>
+
     <main data-testid="main-container">
       <article class="profile-card" data-testid="profile-card">
         <h2 class="profile-name" data-testid="profile-name">
