--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
       <nav class="navbar" role="navigation" aria-label="Main Navigation">
         <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About Me</a></li>
+          <li><a href="about-us.html">About Me</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </nav>
