--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         
         <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About Me</a></li>
+          <li><a href="about-us.html">About Me</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </nav>
